--- a/tinder/src/styles/LoginPage.css
+++ b/tinder/src/styles/LoginPage.css
@@ -1,3 +1,18 @@
-.loginButton {
-  background-color: #ffffff;
+.Inputs-Box {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+
+.loginButtonDiv {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  margin-top: 30px;
+}
+.all-inputs {
+  margin-left: 30%;
+  margin-right: 30%;
+  padding: 10% 10%;
+  display: flex-box;
 }
