--- a/tinder/src/styles/HomePage.css
+++ b/tinder/src/styles/HomePage.css
@@ -11,21 +11,22 @@
 }
 
 .card {
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  cursor: pointer;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
-  overflow: hidden;
+  justify-content: space-between;
+  height: 100%; /* Make sure the card takes up the full height */
 }
 
+.bottom-content {
+  margin-top: auto;
+}
 .card img {
   object-fit: cover;
 }
 
 .button-container {
   position: absolute;
+  margin-top: 60px;
   justify-content: center;
   align-items: center;
   display: flex;
